--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
  <head>
    <meta charset="utf-8">
    <title>Small Business Legal Academy</title>
-   <link rel="stylesheet" href="css-sp/sp-main.css" type="text/css" />
-   <link rel="stylesheet" href="css-sp/sp-normalize.css" type="text/css" />
-   <link rel="stylesheet" href="css-sp/sp-style.css" type="text/css" />
+   <link rel="stylesheet" href="css/main.css" type="text/css" />
+   <link rel="stylesheet" href="css/normalize.css" type="text/css" />
+   <link rel="stylesheet" href="css/style.css" type="text/css" />
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,700' rel='stylesheet' type='text/css'>
 
  <body>
